# mimesh

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  rend_glfw.cxx  tiger1024.tga  tiger256.tga  tiger512.tga  venus1024.tga  venus256.tga  venus512.tga  veti.mim
render-1.0/: MR_Mesh.cxx  MR_Mesh.h  MR_Patch.cxx  MR_Patch.h  MR_Vec.cxx  MR_Vec.h  Vec3f.cxx  Vec3f.h  envDep.h  myGL.hxx  mydef.h  rend.cxx  rend_glfw.cxx  tga.c  tga.h
